// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addIntoWatch no signed order fillable 1`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch no signed order fillable 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`addIntoWatch no signed order fillable 3`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`addIntoWatch with signed order fillable 1`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch with signed order fillable 2`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`addIntoWatch with signed order non fillable 1`] = `
Array [
  Array [
    Object {
      "balance": 0,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "update",
    },
  ],
]
`;

exports[`addIntoWatch with signed order non fillable 2`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch with signed order non fillable 3`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`handle orderUpdate add 1`] = `
Array [
  Array [
    "0xOrderHash",
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`handle orderUpdate terminate 1`] = `
Array [
  Array [
    "0xOrderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerAllowance 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerAllowance 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "balance",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerBalance 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.InsufficientMakerBalance 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "balance",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderCancelled 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderCancelled 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "terminate",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillExpired 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillExpired 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "terminate",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillRoundingError 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderFillRoundingError 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "fill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate invalid ExchangeContractErrs.OrderRemainingFillAmountZero 2`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "fill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid ask fill 1`] = `
Array [
  Array [
    1.23e-16,
    4.55e-16,
    undefined,
    false,
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid ask fill 2`] = `
Array [
  Array [
    Object {
      "balance": 111,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "pFill",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid balance plus fill less than orignial amount 1`] = `
Array [
  Array [
    Object {
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "balance",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid balance plus fill less than orignial amount 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid bid fill 1`] = `
Array [
  Array [
    4.55e-16,
    1.23e-16,
    undefined,
    true,
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid bid fill 2`] = `
Array [
  Array [
    Object {
      "balance": 111,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "pFill",
    },
  ],
]
`;

exports[`loadOrders 1`] = `
Array [
  Array [
    "orderHash1",
  ],
  Array [
    "orderHash2",
  ],
]
`;

exports[`loadOrders 2`] = `
Array [
  Array [
    "orderHash3",
  ],
]
`;

exports[`remove from watch, exisitng order 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`updateOrder isValid no userOrder 1`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "method",
      "orderHash": "orderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "status",
    },
  ],
]
`;

exports[`updateOrder isValid no userOrder 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`updateOrder isValid userOrder 1`] = `
Array [
  Array [
    Object {
      "balance": -1,
      "method": "method",
      "orderHash": "0xOrderHash",
      "pair": "pair",
      "requestor": "orderWatcher",
      "status": "status",
    },
  ],
]
`;
